# copa-prompt-formatting

./: ATA-info.txt  ReadMe.md  filtered_csv.py  pyproject.toml  run.sh
copa-ata/: main.py
